<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@drawable/fs_button_click"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/file_icon"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="12dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/fs_file"
            android:scaleType="centerInside" />

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginEnd="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/file_name"
                android:textStyle="bold"
                android:ellipsize="end"
                android:lines="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/fs_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/file_time"
                    android:textColor="@color/fs_dark_gray"
                    android:textSize="16sp"
                    android:text="@string/fs_file_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/file_size"
                    android:textSize="16sp"
                    android:textColor="@color/fs_dark_gray"
                    android:layout_marginStart="8dp"
                    android:text="@string/fs_file_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/check_box"
            android:visibility="gone"
            android:checked="false"
            android:clickable="false"
            android:button="@null"
            android:background="@drawable/fs_check_back"
            android:layout_marginEnd="20dp"
            android:layout_width="20dp"
            android:layout_height="20dp"/>

        <ImageView
            android:id="@+id/in_dir_indicator"
            android:visibility="gone"
            android:src="@drawable/fs_next_arrow"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>